test/asm/local-symbols.asm
SECTION "Test", ROM0[0]

GlobalScope: ; Define a global scope for locals to not error out on that

.label:
.equ EQU 0
.equs EQUS "Hello tester"
.set SET 42
.macro: MACRO
    ;
ENDM
